<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_layout_bg"
              android:orientation="vertical">

    <include layout="@layout/app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/offset_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/offset_regular"
                        android:layout_marginStart="@dimen/offset_regular"
                        android:layout_marginTop="@dimen/offset_regular"
                        android:text="@string/text_account"
                        android:textColor="@color/settings_header"
                        android:textSize="@dimen/text_size_16"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@drawable/divider_horizontal_grey"
                        android:orientation="vertical"
                        android:showDividers="middle|end">

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_receive_messages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:switchVisibility="visible"
                            app:titleText="@string/text_receive_only_friends_messages"/>

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_change_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:titleText="@string/text_change_password">
                        </com.rolling_stones.rollingstonesandroid.views.SettingsItem>

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_delete_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:titleText="@string/title_delete_account"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/offset_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_application"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/offset_regular"
                        android:layout_marginStart="@dimen/offset_regular"
                        android:layout_marginTop="@dimen/offset_regular"
                        android:text="@string/text_application"
                        android:textColor="@color/settings_header"
                        android:textSize="@dimen/text_size_16"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@drawable/divider_horizontal_grey"
                        android:orientation="vertical"
                        android:showDividers="middle|end">

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_sound"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:switchVisibility="visible"
                            app:titleText="@string/text_sound"/>

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_vibration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:switchVisibility="visible"
                            app:titleText="@string/text_vibration"/>

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_notification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:switchVisibility="visible"
                            app:titleText="@string/text_notification"/>

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_friend_list_order"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:subtitleVisibility="visible"
                            app:titleText="@string/text_friend_list_order"/>

                        <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                            android:id="@+id/si_font_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:subtitleVisibility="visible"
                            app:titleText="@string/text_font_size"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/offset_medium">

                <com.rolling_stones.rollingstonesandroid.views.SettingsItem
                    android:id="@+id/si_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleColor="@color/colorPrimaryDark"
                    app:titleText="@string/title_logout"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>